加入登出功能

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="../assets/ico/favicon.png">-->
-    
+
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -50,6 +50,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">首页</a></li>
+              <% IF hadlogin %><li class="active"><a href="/loginout">注销</a></li><% END %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
