--- a/views/room.tt
+++ b/views/room.tt
@@ -12,7 +12,10 @@
 <p>github: <a href="https://github.com/formalin14/Perl-Chat">https://github.com/formalin14/Perl-Chat</a></p>
 <div class="row">
   <div class="span8">
-    <h2><% room.name %> <small><% IF subject %>- <% subject %><% ELSE %>- 全部<% END %> </small></h2>
+    <h2><% room.name %> <small><% IF subject %>- <% subject %><% ELSE %>- 全部<% END %> </small>  <small>-
+    <a href="javascript:void(0)" id="clear_msgs">清空消息</a>
+
+    </small></h2>
     <div id="chat-window">
     </div>
     <p> </p>
